# FFMpegTest

./: README  build.gradle  build_android.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ffmpeg/test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLogUtil.h  CMakeLists.txt  CPlusLogUtil.h  CallJavaTest.cpp  CallJavaTest.h  DynamicNative.cpp  DynamicNative.h  Log.cpp  LogUtils.cpp  LogUtils.h  Mp4ToM3U8.c  Mp4ToM3U8.h  SingletonTest.cpp  SingletonTest.h  VideoDecodeUtil.c  VideoDecodeUtil.cpp  VideoDecodeUtil.h  ffmpeg.c  native-lib.cpp  test.c
app/src/main/cpp/Singleton/: SingletonTest.cpp  SingletonTest.h  SingletonTest1.cpp  SingletonTest1.h
app/src/main/cpp/dynamic/: DynamicNative.cpp
app/src/main/cpp/log/: DLogUtils.cpp  DLogUtils.h
app/src/main/cpp/play/: FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideoPlay.cpp  FFmpegVideoPlay.h  OpenSLESPlayMusic.cpp  OpenSLESPlayMusic.h  ShaderVideoPlay.cpp  ShaderVideoPlay.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/cpp/videoPlay/: FFmpegAudioPlayer.cpp  FFmpegAudioPlayer.h  FFmpegVideoPlayer.cpp  FFmpegVideoPlayer.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/java/com/ffmpeg/test/: FFmpegTest.java  JNIDynamicUtils.java  JNITest.java  JNIVideoPlayer.java  MainActivity.java  ShaderVideo.java  ShaderVideoActivity.java  VideoActivity.java  VideoPlayActivity.java  VideoView.java
app/src/main/res/layout/: activity_main.xml  activity_shader_video.xml  activity_show_image.xml  activity_test.xml  activity_video.xml  activity_video_play.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ffmpeg/test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
